--- a/index.html
+++ b/index.html
@@ -1,1 +1,14 @@
-!
+<!DOCTYPE html>
+<html lang="en">
+<head>
+    <meta charset="UTF-8">
+    <meta http-equiv="X-UA-Compatible" content="IE=edge">
+    <meta name="viewport" content="width=device-width, initial-scale=1.0">
+    <title>Document</title>
+</head>
+<body>
+    <p>Lorem ipsum dolor sit, amet consectetur adipisicing elit. Officiis dolorem, ab corrupti nisi illum pariatur fuga quas consequuntur sequi, molestiae quia exercitationem nulla autem magni eaque deleniti quibusdam neque rem distinctio velit iusto nesciunt odio eos omnis? Vel veniam dicta, voluptas officia itaque consequatur velit rem reprehenderit veritatis, quis harum. Velit libero atque, non sapiente exercitationem odio et! Culpa nam consequuntur quisquam porro ad vitae sunt accusamus nesciunt magni at aut perferendis fugit impedit officia, dicta eius a optio asperiores quasi eligendi. Est error deleniti corporis corrupti cumque provident praesentium modi sit dolor, nemo odit illum incidunt fugit atque sapiente!
+
+    </p>
+</body>
+</html>
