simple styling  pergagraph
2 hundred words from lorem

--- a/index.html
+++ b/index.html
@@ -5,10 +5,11 @@
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Document</title>
+    <link rel="stylesheet" href="/css/style.css">
 </head>
 <body>
-    <p>Lorem ipsum dolor sit, amet consectetur adipisicing elit. Officiis dolorem, ab corrupti nisi illum pariatur fuga quas consequuntur sequi, molestiae quia exercitationem nulla autem magni eaque deleniti quibusdam neque rem distinctio velit iusto nesciunt odio eos omnis? Vel veniam dicta, voluptas officia itaque consequatur velit rem reprehenderit veritatis, quis harum. Velit libero atque, non sapiente exercitationem odio et! Culpa nam consequuntur quisquam porro ad vitae sunt accusamus nesciunt magni at aut perferendis fugit impedit officia, dicta eius a optio asperiores quasi eligendi. Est error deleniti corporis corrupti cumque provident praesentium modi sit dolor, nemo odit illum incidunt fugit atque sapiente!
-
-    </p>
+<head>
+<p class="pera">Lorem ipsum dolor sit amet, consectetur adipisicing elit. Maxime id repellat voluptates soluta unde velit libero eius aperiam dolorum iusto obcaecati, officiis accusamus sunt nemo mollitia labore magnam dicta totam! Quis veniam, modi assumenda, sit tenetur quam laboriosam voluptatibus similique ut velit at omnis aspernatur officia expedita fugit labore blanditiis impedit vitae? Hic, molestias. Nihil, rerum? In quo quidem libero totam ab corrupti doloribus earum impedit delectus, sed, magnam cumque voluptatum, deleniti fugiat recusandae. Distinctio illum, veniam voluptatibus, quod placeat nam vero corporis quibusdam illo expedita voluptatem voluptates! Dolor cumque sit asperiores mollitia dolorum sunt dolorem delectus quia ut, aut, porro fugiat nesciunt veritatis voluptatibus. At soluta maiores excepturi error ipsam aut nulla sapiente quos vero minima quia similique laudantium ab adipisci, esse odit laborum et totam placeat iure incidunt deleniti. Dolore explicabo dignissimos ipsa magni quis voluptatibus natus quaerat id quasi modi, autem facere, ipsum quas beatae eaque commodi error cumque quod exercitationem aliquam minus provident molestias maxime? Illum animi placeat rerum autem quis saepe. Placeat libero ex excepturi, architecto iusto doloremque asperiores reprehenderit dicta tenetur inventore? Quas, deleniti eum eveniet porro iusto ullam praesentium esse sapiente? Aliquid corporis ab, similique expedita exercitationem perspiciatis. Veritatis distinctio facilis magnam quia! </p>
+</head>
 </body>
 </html>
