--- a/schoolofapp.html
+++ b/schoolofapp.html
@@ -11,7 +11,7 @@
 </head>
 
 <body>
-    <h1> School of App Syllabus and Tutorials</h1>
+    <h1 class="primary"> School of App Syllabus and Tutorials</h1>
     <table class="table table-striped mytable container-md">
         <thead>
             <th>Time</th>
