--- a/admin/dashboard.html
+++ b/admin/dashboard.html
@@ -5,9 +5,11 @@
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Shaym Dashboard</title>
+    <link rel="stylesheet" href="../css/bootstrap.min.css">
     <link rel="stylesheet" href="./dashboard.css">
 </head>
 <body>
-    
+
+    <script type="javascript" src="../js/bootstrap.bundle.min.js"></script>
 </body>
 </html>
