--- a/MyBoostrap.html
+++ b/MyBoostrap.html
@@ -39,20 +39,29 @@
 
      <!-- start to create cards -->
      <div class="card mb-3">
-        <img src="..." class="card-img-top" alt="...">
+        <img src="./img/img1.jpg" class="card-img-top" alt="..." width="100px" height="600px">
         <div class="card-body">
-          <h5 class="card-title">Card title</h5>
-          <p class="card-text">This is a wider card with supporting text below as a natural lead-in to additional content. This content is a little bit longer.</p>
-          <p class="card-text"><small class="text-muted">Last updated 3 mins ago</small></p>
+          <h5 class="card-title " style="margin-left: 50%;"><strong>Html coding</strong></h5>
+          <p class="card-text"><strong>The HyperText Markup Language or HTML is the standard markup language for documents designed to be displayed in a web browser. It can be assisted by technologies such as Cascading Style Sheets (CSS) and scripting languages such as JavaScript. HTML. (HyperText Markup Language)</strong></p>
+
+
         </div>
       </div>
       <div class="card">
         <div class="card-body">
-          <h5 class="card-title">Card title</h5>
-          <p class="card-text">This is a wider card with supporting text below as a natural lead-in to additional content. This content is a little bit longer.</p>
+          <img src="./img/img2.jpg" class="card-img-bottom" alt="...">
+          <h5 class="card-title">Python</h5>
+          <p class="card-text">What is Python?
+            Python is a popular programming language. It was created by Guido van Rossum, and released in 1991.
+            
+            It is used for:
+            
+            web development (server-side),
+            software development,
+            mathematics,
+            system scripting.</p>
           <p class="card-text"><small class="text-muted">Last updated 3 mins ago</small></p>
         </div>
-        <img src="..." class="card-img-bottom" alt="...">
       </div>
      <!-- end to the card -->
 
